force-app/main/default/objects/Scope3PcmtItem/fields/Actual_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Actual_Supplier_Name__c</fullName>
    <description>HA: Created for NZC Implementation. Reason: This field is created to store the actual Supplier name which is associated to Procurement item.</description>
    <label>Actual Supplier Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>