force-app/main/default/objects/Scope3PcmtItem/fields/Air_Travel_Energy_Use_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Air_Travel_Energy_Use_Record_ID__c</fullName>
    <description>AJ: Created for NZC Implementation,, This field is created to capture Air Travel Energy Use Record Id:</description>
    <label>Air Travel Energy Use Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>