force-app/main/default/objects/Scope3PcmtItem/fields/Book_Value__c.field-meta.xml
<CustomField>
    <fullName>Book_Value__c</fullName>
    <description>SB: Created for NZC Implementation. This field is created to capture Book Value for investment data</description>
    <label>Book Value $</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>