force-app/main/default/objects/Scope3PcmtItem/fields/Cognizant_Owner_Entity__c.field-meta.xml
<CustomField>
    <fullName>Cognizant_Owner_Entity__c</fullName>
    <description>SB: Created for NZC Implementation, This field is created to capture Cognizant Owner Entity for investment data</description>
    <label>Cognizant Owner Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>