force-app/main/default/objects/Scope3PcmtItem/fields/Cognizant_Right_to_Board_Seat__c.field-meta.xml
<CustomField>
    <fullName>Cognizant_Right_to_Board_Seat__c</fullName>
    <description>SB: Created for NZC Implementation. This field is created to capture Cognizant Right to Board Seat for investment data</description>
    <label>Cognizant Right to Board Seat?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>