force-app/main/default/objects/Scope3PcmtItem/fields/Cognizant_Share__c.field-meta.xml
<CustomField>
    <fullName>Cognizant_Share__c</fullName>
    <description>SB: Created for NZC Implementation, This field is created to capture Cognizant % Share for investment data</description>
    <formula>CTS_s_Last_Known_Interest_Percentage__c * Revenue__c * year__c</formula>
    <label>Cognizant $ Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>