force-app/main/default/objects/Scope3PcmtItem/fields/Comments_and_version_notes__c.field-meta.xml
<CustomField>
    <fullName>Comments_and_version_notes__c</fullName>
    <description>SB: Created for NZC Implementation. This field is created to capture Comments and version notes for investment data</description>
    <label>Comments and version notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>