force-app/main/default/objects/Scope3PcmtItem/fields/CTS_Right_to_Board_Observer_Position__c.field-meta.xml
<CustomField>
    <fullName>CTS_Right_to_Board_Observer_Position__c</fullName>
    <description>SB: Created for NZC Implementation. This field is created to capture CTS Right to Board Observer Position for investment data</description>
    <label>CTS Right to Board Observer Position?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>