force-app/main/default/objects/Scope3PcmtItem/fields/CTS_s_Last_Known_Interest_Percentage__c.field-meta.xml
<CustomField>
    <fullName>CTS_s_Last_Known_Interest_Percentage__c</fullName>
    <description>SB: Created for NZC Implementation. This field is created to capture CTS&apos;s Last Known Interest Percentage for investment data</description>
    <label>CTS&apos;s Last Known Interest Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>