force-app/main/default/objects/Scope3PcmtItem/fields/Investment_Record__c.field-meta.xml
<CustomField>
    <fullName>Investment_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SB: Created for NZC Implementation, This field is created to capture whether Investment Record is checked or not for investment data</description>
    <label>Investment Record</label>
    <type>Checkbox</type>
</CustomField>