force-app/main/default/objects/Scope3PcmtItem/fields/Other_Rights__c.field-meta.xml
<CustomField>
    <fullName>Other_Rights__c</fullName>
    <description>SB: Created for NZC Implementation. This field is created to capture Other Rights for investment data</description>
    <label>Other Rights</label>
    <length>255</length>
    <type>Text</type>
</CustomField>