force-app/main/default/objects/Scope3PcmtItem/fields/Reason_of_Emission_Factor_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_Emission_Factor_Exclusion__c</fullName>
    <description>HA: Created for NZC Implementation. This field will populate the reason of EF Exclusion from the EF set item.</description>
    <label>Reason of Emission Factor Exclusion</label>
    <length>80</length>
    <type>Text</type>
</CustomField>