force-app/main/default/objects/Scope3PcmtItem/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>SB: Created for NZC Implementation. This field is created to capture 2023 Revenue for investment data</description>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>