force-app/main/default/objects/Scope3PcmtItem/fields/Site_Information__c.field-meta.xml
<CustomField>
    <fullName>Site_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AJ: Created for NZC Implementation, This field is created to capture the Site Information Name from Stationary Asset Energy Use Record:</description>
    <label>Site Information</label>
    <referenceTo>StnryAssetEnvrSrc</referenceTo>
    <relationshipLabel>Scope 3 Procurement Items</relationshipLabel>
    <relationshipName>Scope_3_Procurement_Items</relationshipName>
    <type>Lookup</type>
</CustomField>