force-app/main/default/objects/Scope3PcmtItem/fields/Spending_Category_0__c.field-meta.xml
<CustomField>
    <fullName>Spending_Category_0__c</fullName>
    <description>HA: Created for NZC Implementation, This Field is created to Store the Spend Category 0 value</description>
    <label>Spending Category 0</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>