force-app/main/default/objects/Scope3PcmtItem/fields/Stationary_Use_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Stationary_Use_Record_ID__c</fullName>
    <description>AJ: Created for NZC Implementation, This field is created to capture Stationary Asset Energy Use ID:</description>
    <label>Stationary Asset Energy Use Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>