force-app/main/default/objects/Scope3PcmtItem/fields/Voting_rights__c.field-meta.xml
<CustomField>
    <fullName>Voting_rights__c</fullName>
    <description>SB: Created for NZC Implementation. This field is created to capture Voting rights for investment data</description>
    <label>Voting rights?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>