force-app/main/default/objects/Scope3PcmtItem/fields/WTT_Distance_Actual__c.field-meta.xml
<CustomField>
    <fullName>WTT_Distance_Actual__c</fullName>
    <description>AJ: Created for NZC Implementation, This field is created to store Actual Distance Value From Scope 3 Objects:</description>
    <label>WTT Distance Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>