force-app/main/default/objects/Scope3PcmtItem/fields/WTT_Distance_KM__c.field-meta.xml
<CustomField>
    <fullName>WTT_Distance_KM__c</fullName>
    <description>AJ: Created for NZC Implementation, This field is created to capture Spent Amount for Procurement Item for WTT Record:</description>
    <formula>SpentAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WTT Distance (KM)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>