force-app/main/default/objects/Scope3PcmtItem/fields/WTT_Distance_Unit_Actual__c.field-meta.xml
<CustomField>
    <fullName>WTT_Distance_Unit_Actual__c</fullName>
    <description>AJ: Created for NZC Implementation, This field is created to store Actual Distance Unit Value From Scope 3 Objects:</description>
    <label>WTT Distance Unit Actual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>