force-app/main/default/objects/Scope3PcmtItem/fields/WTT_Fuel_Consumption_kWh__c.field-meta.xml
<CustomField>
    <fullName>WTT_Fuel_Consumption_kWh__c</fullName>
    <description>AJ: Created for NZC Implementation, This field is created to capture Spent Amount for Procurement Item for WTT Record:</description>
    <formula>SpentAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WTT Fuel Consumption (kWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>