force-app/main/default/objects/Scope3PcmtItem/fields/WTT_Fuel_Consumption_Unit_Actual__c.field-meta.xml
<CustomField>
    <fullName>WTT_Fuel_Consumption_Unit_Actual__c</fullName>
    <description>AJ: Created for NZC Implementation, This field is created to store Actual Fuel Consumption Unit value From Stationary Asset Energy Use Record:</description>
    <label>WTT Fuel Consumption Unit Actual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>