force-app/main/default/objects/Scope3PcmtItem/fields/WTT_Fuel_Consumtion_Actual__c.field-meta.xml
<CustomField>
    <fullName>WTT_Fuel_Consumtion_Actual__c</fullName>
    <description>AJ: Created for NZC Implementation, This field is created to store Actual Fuel Consumption Value From Stationary Asset Energy Use Record:</description>
    <label>WTT Fuel Consumtion Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>