force-app/main/default/objects/Scope3PcmtItem/fields/WTT_Fuel_Types__c.field-meta.xml
<CustomField>
    <fullName>WTT_Fuel_Types__c</fullName>
    <label>WTT Fuel Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>NaturalGas</fullName>
                <label>Natural Gas</label>
            </value>
            <value>
                <fullName>custom_LPG</fullName>
                <label>LPG</label>
            </value>
            <value>
                <fullName>custom_MultitenantDG</fullName>
                <label>Multi tenant DG</label>
            </value>
            <value>
                <fullName>Mobile fuels - Diesel</fullName>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Electricity - Data Centers</fullName>
            </value>
            <value>
                <fullName>Heat</fullName>
            </value>
            <value>
                <fullName>Air travel</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Common area</fullName>
            </value>
            <value>
                <fullName>Data centers (CIS Managed)</fullName>
            </value>
            <value>
                <fullName>Cooling</fullName>
            </value>
            <value>
                <fullName>Mobile fuels - Gasoline</fullName>
            </value>
            <value>
                <fullName>Rental Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>