force-app/main/default/objects/Scope3PcmtItem/fields/WTT_Record__c.field-meta.xml
<CustomField>
    <fullName>WTT_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HA: Created for NZC Implementation. This checkbox will indicate weather the record is WTT or Normal Procurement record.</description>
    <label>WTT Record</label>
    <type>Checkbox</type>
</CustomField>