force-app/main/default/objects/Scope3PcmtItem/fields/year__c.field-meta.xml
<CustomField>
    <fullName>year__c</fullName>
    <description>SB: Created for NZC Implementation, This field is created to capture %year for investment data</description>
    <label>% year</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>