force-app/main/default/objects/Scope3PcmtItem/listViews/WTT_Scope_3_Procurement_Items.listView-meta.xml
<ListView>
    <fullName>WTT_Scope_3_Procurement_Items</fullName>
    <columns>Name</columns>
    <columns>Site_Information__c</columns>
    <columns>WTT_Fuel_Types__c</columns>
    <columns>Scope3EmissionsInTco2</columns>
    <columns>SpentDate</columns>
    <columns>WTT_Distance_KM__c</columns>
    <columns>WTT_Electricity_Consumption_kWh__c</columns>
    <columns>WTT_Fuel_Consumtion_Actual__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WTT_Record__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>WTT Scope 3 Procurement Items</label>
</ListView>